--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
       I'm a blank slate :)
     </div>
   </body>
-  <script src="/static/main.min.js" />
+  <script src="/static/main.min.js"></script>
 </html>
