--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" url="/static/main.min.css" />
+    <link rel="stylesheet" href="/static/main.min.css" />
   </head>
 
   <body>
